Connect to own Supabase + blog paywall + prerender + CI

--- a/index.html
+++ b/index.html
@@ -17,32 +17,37 @@
     <meta name="format-detection" content="telephone=no" />
     
     <!-- PWA Icons -->
-    <link rel="apple-touch-icon" href="/pwa-192x192.png" />
-    <link rel="icon" type="image/png" href="/pwa-192x192.png" />
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+
+    <!-- PWA Icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="/pwa-512x512.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
-    <link rel="canonical" href="https://abhishekpanda.com" />
+    <link rel="canonical" href="https://www.abhishekpanda.com" />
 
     <meta property="og:title" content="Abhishek Panda | .NET Architect • AI/ML Engineer • Cloud-Native Specialist" />
     <meta property="og:description" content="Engineering ideas into reality, one clean build at a time. Learn from industry-proven courses, blog posts, and digital products." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://abhishekpanda.com" />
-    <meta property="og:image" content="https://abhishekpanda.com/og-image.png" />
+    <meta property="og:url" content="https://www.abhishekpanda.com" />
+    <meta property="og:image" content="https://www.abhishekpanda.com/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@abhishekpanda" />
     <meta name="twitter:title" content="Abhishek Panda | .NET Architect • AI/ML Engineer • Cloud-Native Specialist" />
     <meta name="twitter:description" content="Engineering ideas into reality, one clean build at a time." />
-    <meta name="twitter:image" content="https://abhishekpanda.com/og-image.png" />
+    <meta name="twitter:image" content="https://www.abhishekpanda.com/og-image.png" />
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Abhishek Panda",
-        "url": "https://abhishekpanda.com",
+        "url": "https://www.abhishekpanda.com",
         "jobTitle": ".NET Architect, AI/ML Engineer, Cloud-Native Specialist",
         "description": "Engineering ideas into reality, one clean build at a time.",
         "sameAs": [
@@ -56,7 +61,7 @@
     <!-- Preload Critical Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="dns-prefetch" href="https://dwngkcsnrjiywkoqvgtx.supabase.co" />
+    <link rel="dns-prefetch" href="https://qayywyddbprlhkqcqllf.supabase.co" />
     
     <!-- iOS Splash Screens -->
     <style>
