Wire landing social links + add visitor counter

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-    <title>Abhishek Panda | .NET Architect • AI/ML Engineer • Cloud-Native Specialist</title>
-    <meta name="description" content="Engineering ideas into reality, one clean build at a time. .NET Architect, AI/ML Engineer, and Cloud-Native Specialist with 12+ years of experience." />
+    <title>Abhishek Panda | Technical Architect • AI Architect • CEO, OriginX Labs</title>
+    <meta name="description" content="Abhishek Panda is a Technical Architect specializing in AI, distributed systems, .NET microservices, and cloud-native platforms. CEO & Founder of OriginX Labs Pvt. Ltd." />
     <meta name="author" content="Abhishek Panda" />
-    <meta name="keywords" content=".NET, C#, AI, ML, Cloud, AWS, Azure, Microservices, System Design, Architecture" />
+    <meta name="keywords" content="Abhishek Panda, Technical Architect, AI Architect, .NET Architect, Cloud Architect, Distributed Systems, Microservices, OriginX Labs, CEO, Founder, Author" />
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#0f172a" />
@@ -30,16 +30,16 @@
 
     <link rel="canonical" href="https://www.abhishekpanda.com" />
 
-    <meta property="og:title" content="Abhishek Panda | .NET Architect • AI/ML Engineer • Cloud-Native Specialist" />
-    <meta property="og:description" content="Engineering ideas into reality, one clean build at a time. Learn from industry-proven courses, blog posts, and digital products." />
+    <meta property="og:title" content="Abhishek Panda | Technical Architect • AI Architect • CEO, OriginX Labs" />
+    <meta property="og:description" content="Technical Architect specializing in AI, distributed systems, .NET microservices, and cloud-native platforms. CEO & Founder of OriginX Labs Pvt. Ltd." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.abhishekpanda.com" />
     <meta property="og:image" content="https://www.abhishekpanda.com/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@abhishekpanda" />
-    <meta name="twitter:title" content="Abhishek Panda | .NET Architect • AI/ML Engineer • Cloud-Native Specialist" />
-    <meta name="twitter:description" content="Engineering ideas into reality, one clean build at a time." />
+    <meta name="twitter:site" content="@Panda_Abhishek8" />
+    <meta name="twitter:title" content="Abhishek Panda | Technical Architect • AI Architect • CEO, OriginX Labs" />
+    <meta name="twitter:description" content="Technical Architect specializing in AI, distributed systems, .NET microservices, and cloud-native platforms." />
     <meta name="twitter:image" content="https://www.abhishekpanda.com/og-image.png" />
 
     <script type="application/ld+json">
@@ -48,13 +48,45 @@
         "@type": "Person",
         "name": "Abhishek Panda",
         "url": "https://www.abhishekpanda.com",
-        "jobTitle": ".NET Architect, AI/ML Engineer, Cloud-Native Specialist",
-        "description": "Engineering ideas into reality, one clean build at a time.",
+        "jobTitle": "Technical Architect, AI Architect",
+        "description": "Technical Architect specializing in AI, distributed systems, .NET microservices, and cloud-native platforms. CEO & Founder of OriginX Labs Pvt. Ltd.",
         "sameAs": [
-          "https://linkedin.com/in/abhishekpanda",
-          "https://github.com/abhishekpanda",
-          "https://youtube.com/@abhishekpanda"
+          "https://www.linkedin.com/in/abhishekpandaofficial/",
+          "https://github.com/abhishekpandaOfficial",
+          "https://www.youtube.com/@abhishekpanda_official",
+          "https://x.com/Panda_Abhishek8",
+          "https://medium.com/@official.abhishekpanda",
+          "https://substack.com/@abhishekpanda08",
+          "https://hashnode.com/@abhishekpanda",
+          "https://writing.stackexchange.com/users/82639/abhishek-official",
+          "https://stackcraft.io/abhishekpanda"
         ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "OriginX Labs Pvt. Ltd.",
+        "url": "https://www.originxlabs.com",
+        "founder": {
+          "@type": "Person",
+          "name": "Abhishek Panda",
+          "url": "https://www.abhishekpanda.com"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Abhishek Panda",
+        "url": "https://www.abhishekpanda.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://www.abhishekpanda.com/blog?query={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
       }
     </script>
     
