feat: improve responsiveness, SEO, branding, ABHIBOT, and performance

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Abhishek Panda | Technical Architect • AI Architect • CEO, OriginX Labs</title>
     <meta name="description" content="Abhishek Panda is a Technical Architect specializing in AI, distributed systems, .NET microservices, and cloud-native platforms. CEO & Founder of OriginX Labs Pvt. Ltd." />
     <meta name="author" content="Abhishek Panda" />
     <meta name="keywords" content="Abhishek Panda, Technical Architect, AI Architect, .NET Architect, Cloud Architect, Distributed Systems, Microservices, OriginX Labs, CEO, Founder, Author" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#0f172a" />
