--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     
     <!-- PWA Icons -->
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
 
     <!-- PWA Icons -->
