--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     
     <!-- PWA Icons -->
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=3" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png?v=3" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png?v=3" />
+    <link rel="shortcut icon" href="/favicon.png?v=3" />
+    <link rel="apple-touch-icon" href="/favicon.png?v=3" />
 
     <!-- PWA Icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png" />
